src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK(Country__c, Country__r.Name, &quot;_self&quot;)+&apos;-&gt;&apos;+ Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_District__c</fullName>
        <label>Total District</label>
        <summaryForeignKey>District__c.State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>Count_District__c</fullName>
        <label>Count District</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>